new project organization and fully updated to RC.4

--- a/e2e/tsconfig.json
+++ b/e2e/tsconfig.json
@@ -1,17 +1,13 @@
 {
-  "compileOnSave": false,
-  "compilerOptions": {
-    "declaration": false,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "mapRoot": "",
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "noEmitOnError": true,
-    "noImplicitAny": false,
-    "rootDir": ".",
-    "sourceMap": true,
-    "sourceRoot": "/",
-    "target": "es5"
-  }
+"compilerOptions": {
+"target": "es5",
+"module": "commonjs",
+"moduleResolution": "node",
+"sourceMap": true,
+"emitDecoratorMetadata": true,
+"experimentalDecorators": true,
+"removeComments": false,
+"noImplicitAny": true,
+"suppressImplicitAnyIndexErrors": true
+}
 }
