--- a/package.json
+++ b/package.json
@@ -31,14 +31,21 @@
   },
   "devDependencies": {
     "angular-cli": "1.0.0-beta.8",
+    "autoprefixer": "^6.3.7",
     "codelyzer": "0.0.20",
     "concurrently": "^2.0.0",
+    "cssnano": "^3.7.1",
     "ember-cli-inject-live-reload": "1.4.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
+    "gulp-ext-replace": "^0.3.0",
+    "gulp-imagemin": "^3.0.1",
     "gulp-jshint": "^2.0.1",
+    "gulp-postcss": "^6.1.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-typescript": "^2.13.6",
     "gulp-uglify": "^1.5.4",
     "gulp-util": "^3.0.7",
     "jasmine-core": "2.4.1",
@@ -47,6 +54,7 @@
     "karma-chrome-launcher": "0.2.3",
     "karma-jasmine": "0.3.8",
     "lite-server": "^2.2.0",
+    "precss": "^1.4.0",
     "protractor": "3.3.0",
     "ts-node": "0.5.5",
     "tslint": "3.11.0",
